commit for Ally

--- a/of/config/locales/zh_TW.yml
+++ b/of/config/locales/zh_TW.yml
@@ -58,7 +58,7 @@ zh_TW:
   "User|Language": "語言"
   "release": "規畫釋出"
   "PREPARING": "準備中(Preparing)"
-  "RELEASED": "釋出(Released)"
+  "RELEASED": "Released"
   "Image|Picture only": "只允許圖片"
   "Permission|Modify Project Information": "管理'專案資訊'"
   "Permission|Add/Remove Project Members": "管理'專案成員'"
@@ -113,12 +113,12 @@ zh_TW:
   "Project|Created at": "建立日期"
   "Project|Category": "專案分類"
   "Project|Tags": "標籤"
-  "IDEA": "概念(Idea)"
-  "PREALPHA": "雛形(Pre-Alpha)"
-  "ALPHA": "測試(Alpha)"
-  "BETA": "試用(Beta)"
-  "MATURE": "成熟(Mature)"
-  "STANDARD": "標準(Standard)"
+  "IDEA": "Idea"
+  "PREALPHA": "Pre-Alpha"
+  "ALPHA": "Alpha"
+  "BETA": "Beta"
+  "MATURE": "Mature"
+  "STANDARD": "Standard"
   "url_link_for_OSI: Academic Free License": "http://www.openfoundry.org/licenses/753"
   "url_link_for_OSI: GNU Affero General Public License v3 (AGPL3)": "http://www.opensource.org/licenses/agpl-v3.html"
   "url_link_for_OSI: Adaptive Public License": "http://www.opensource.org/licenses/apl1.0.php"
