--- a/branches/of_to_rails3/config/locales/en.yml
+++ b/branches/of_to_rails3/config/locales/en.yml
@@ -464,7 +464,7 @@ en:
   "Resource Catalog": "Resource Catalog"
   "About": "About"
   "template_footer_content": "Open Source Software Foundry‧ Best Viewed with IE7.0 or Firefox2.0 above, 1024x768 Resolution. <strong>E-Mail</strong>：<a href=\"mailto:contact@openfoundry.org\">contact@openfoundry.org</a><br><strong>Address</strong>：No.128, Sec.2, Academia Rd., Institute of Information Science, Academia Sinica, Nangang District, Taipei City 11529, Taiwan (R.O.C)<a href=\"http://www.openfoundry.org/en/privacy-policy\"><br>Privacy Policy</a>. <a href=\"http://www.openfoundry.org/en/terms-of-use\">Terms-of-use</a><span style=\"position: relative; top: 8px; margin-top: -8px;\"><a href=\"http://www.openfoundry.org/about/8101\"><img src=\"http://www.openfoundry.org/images/M_images/rss-feed-all.png\"></a></span>"
-  "Mail|Sincerely, OSSF Team http://www.openfoundry.org": "Sincerely, OSSF Team <a href=\"http://www.openfoundry.org\">http://www.openfoundry.org</a>"
+  "Mail|Sincerely": "Sincerely, OSSF Team <a href=\"http://www.openfoundry.org\">http://www.openfoundry.org</a>"
   "Cancel": "Cancel"
   "Top Download": "Top Downloads"
   "Rank": "Rank"
