--- a/branches/of_to_rails3/config/locales/zh_TW.yml
+++ b/branches/of_to_rails3/config/locales/zh_TW.yml
@@ -470,7 +470,7 @@ zh_TW:
   "Resource Catalog": "資源表列"
   "About": "關於"
   "template_footer_content": "自由軟體鑄造場 製作 最佳瀏覽狀態：IE7或Firefox2.0以上 (建議使用Firefox) ‧ 解析度1024*768<br><strong>E-Mail</strong>：<a href=\"mailto:contact@openfoundry.org\">contact@openfoundry.org</a> <strong>Address</strong>：台北市南港區研究院路2段128號 中央研究院資訊科學研究所<a href=\"http://www.openfoundry.org/privacy-policy\">隱私權條款</a>. <a href=\"http://www.openfoundry.org/terms-of-use\">使用條款</a><span style=\"position: relative; top: 8px; margin-top: -8px;\"><a href=\"http://www.openfoundry.org/about/8101\"><img src=\"http://www.openfoundry.org/images/M_images/rss-feed-all.png\"></a></span>"
-  "Mail|Sincerely, OSSF Team http://www.openfoundry.org": "Sincerely, OSSF Team <a href=\"http://www.openfoundry.org\">http://www.openfoundry.org</a>"
+  "Mail|Sincerely": "Sincerely, OSSF Team <a href=\"http://www.openfoundry.org\">http://www.openfoundry.org</a>"
   "Cancel": "取消"
   "Top Download": "下載排行"
   "Rank": "排名"
