--- a/branches/of_to_rails3/config/locales/en.yml
+++ b/branches/of_to_rails3/config/locales/en.yml
@@ -88,7 +88,7 @@ en:
   "survey|age": "Age"
   "survey|interests": "Interests"
   "survey|skills": "Skills"
-  "Reference|Source": "Preference"
+  "Reference|Source": "Reference"
   "Length range is ": "Length Range is "
   "Not a valid value": "Not a Valid Value"
   "Group \"Admin\" CAN NOT be EMPTY.": "Group Admin Cannot be Empty"
@@ -123,7 +123,7 @@ en:
   "url_link_for_OSI: GNU Affero General Public License v3 (AGPL3)": "http://www.opensource.org/licenses/agpl-v3.html"
   "url_link_for_OSI: Adaptive Public License": "http://www.opensource.org/licenses/apl1.0.php"
   "url_link_for_OSI: Apache License 2_0": "http://www.openfoundry.org/licenses/29"
-  "url_link_for_OSI: Artistic License 2_0": "http://www.openfoundry.org/licenses/30"
+  "url_link_for_OSI: Artistic License 2_0": "http://www.openfoundry.org/licenses/8267"
   "url_link_for_OSI: Attribution Assurance Licenses": "http://www.opensource.org/licenses/attribution.php"
   "url_link_for_OSI: BSD License (New and Simplified BSD License)": "http://www.openfoundry.org/licenses/31"
   "url_link_for_OSI: Boost Software License (BSL1_0)": "http://www.opensource.org/licenses/bsl1.0.html"
@@ -231,7 +231,7 @@ en:
   "user_delete_finished": "successfully deleted user"
   "Wiki": "Wiki"
   "Project References": "Preference"
-  "Add Reference": "Preference"
+  "Add Reference": "New reference"
   "Mailing List": "Mailing List"
   "Version Control": "Version Control"
   "System error. Please contact the site administrator.": "System error. Please contact the site administrator."
@@ -475,7 +475,7 @@ en:
   "Downloads Hits": "Hits"
   "[Edit]": "Edit"
   "[Delete]": "Delete"
-  "[Add release news]": "New Release"
+  "[Add release news]": "Add release news"
   "Project Upload Repository": "Upload to Project Repository"
   "Current Dir": "Current Path"
   "Reload": "Reload"
