--- a/branches/of_to_rails3/config/locales/zh_TW.yml
+++ b/branches/of_to_rails3/config/locales/zh_TW.yml
@@ -47,9 +47,11 @@ zh_TW:
   "breadcrumb|openfoundry": "Projects"
   "breadcrumb|files": "Files"
   "breadcrumb|new_release": "New Release"
+  "breadcrumb|new_releases": "新增發佈消息"
   "breadcrumb|nscreports": "nscreports"
   "breadcrumb|nsc" : "nsc"
   "breadcrumb|list" : "專案列表"
+  "breadcrumb|report" : "問題回報"
   "User|Login": "帳號名稱"
   "User|Email": "電子郵件"
   "User|Realname": "真實姓名"
@@ -123,7 +125,7 @@ zh_TW:
   "url_link_for_OSI: GNU Affero General Public License v3 (AGPL3)": "http://www.opensource.org/licenses/agpl-v3.html"
   "url_link_for_OSI: Adaptive Public License": "http://www.opensource.org/licenses/apl1.0.php"
   "url_link_for_OSI: Apache License 2_0": "http://www.openfoundry.org/licenses/29"
-  "url_link_for_OSI: Artistic License 2_0": "http://www.openfoundry.org/licenses/30"
+  "url_link_for_OSI: Artistic License 2_0": "http://www.openfoundry.org/licenses/8267"
   "url_link_for_OSI: Attribution Assurance Licenses": "http://www.opensource.org/licenses/attribution.php"
   "url_link_for_OSI: BSD License (New and Simplified BSD License)": "http://www.openfoundry.org/licenses/31"
   "url_link_for_OSI: Boost Software License (BSL1_0)": "http://www.opensource.org/licenses/bsl1.0.html"
@@ -200,9 +202,11 @@ zh_TW:
   "Message sent.": "訊息已送出"
   "Announcements": "系統公告"
   "News": "新聞"
+  "Project News List": "專案公告列表"
   "OpenFoundry News": "OpenFoundry新聞"
   "project_News": "專案公告"
   "Add News": "新增新聞"
+  "Add Project News": "新增公告"
   "No this release.": "無此項目"
   "Add Successful": "新增成功"
   "Edit": "修改"
