--- a/trunk/of/config/locales/en.yml
+++ b/trunk/of/config/locales/en.yml
@@ -459,7 +459,7 @@ en:
   "Content": "Content"
   "People": "People"
   "Community": "Community"
-  "Law and Licenses": "Laws and Licenses"
+  "Law & Licensing": "Law & Licensing"
   "Workshop": "Workshop"
   "Resource Catalog": "Resource Catalog"
   "About": "About"
