--- a/trunk/of/config/locales/zh_TW.yml
+++ b/trunk/of/config/locales/zh_TW.yml
@@ -469,7 +469,7 @@ zh_TW:
   "Content": "文章"
   "People": "人才"
   "Community": "社群"
-  "Law and Licenses": "法律源地"
+  "Law & Licensing": "法律源地"
   "Workshop": "工作坊"
   "Resource Catalog": "資源表列"
   "About": "關於"
