modify menu name

--- a/of/config/locales/en.yml
+++ b/of/config/locales/en.yml
@@ -16,6 +16,7 @@ en:
   "menu_WebHosting": "WebHosting"
   "Projects": "Projects"
   "dashboard": "Dashboard"
+  "Start Here": "Start Here"
   "required_icon": "Required"
   "breadcrumb|show": "Show"
   "breadcrumb|applied": "Applied"
@@ -50,6 +51,7 @@ en:
   "breadcrumb|nscreports": "nscreports"
   "breadcrumb|nsc" : "nsc"
   "breadcrumb|list" : "Project List"
+  "breadcrumb|welcome" : "Start here"
   "User|Login": "Login"
   "User|Email": "Email Address"
   "User|Realname": "Real Name"
@@ -460,7 +462,7 @@ en:
   "People": "People"
   "Community": "Community"
   "Law & Licensing": "Law & Licensing"
-  "Workshop": "Workshop"
+  "Activities": "Activities"
   "Resource Catalog": "Resource Catalog"
   "About": "About"
   "template_footer_content": "Open Source Software Foundry‧ Best Viewed with IE7.0 or Firefox2.0 above, 1024x768 Resolution. <strong>E-Mail</strong>：<a href=\"mailto:contact@openfoundry.org\">contact@openfoundry.org</a><br><strong>Address</strong>：No.128, Sec.2, Academia Rd., Institute of Information Science, Academia Sinica, Nangang District, Taipei City 11529, Taiwan (R.O.C)<a href=\"http://www.openfoundry.org/en/privacy-policy\"><br>Privacy Policy</a>. <a href=\"http://www.openfoundry.org/en/terms-of-use\">Terms-of-use</a><span style=\"position: relative; top: 8px; margin-top: -8px;\"><a href=\"http://www.openfoundry.org/about/8101\"><img src=\"http://www.openfoundry.org/images/M_images/rss-feed-all.png\"></a></span>"
