--- a/of/config/locales/zh_TW.yml
+++ b/of/config/locales/zh_TW.yml
@@ -16,6 +16,7 @@ zh_TW:
   "menu_WebHosting": "專案網頁空間"
   "Projects": "專案"
   "dashboard": "專案管理"
+  "Start Here": "從這開始"
   "required_icon": "必填"
   "breadcrumb|show": "顯示"
   "breadcrumb|applied": "核可"
@@ -52,6 +53,7 @@ zh_TW:
   "breadcrumb|nsc" : "nsc"
   "breadcrumb|list" : "專案列表"
   "breadcrumb|report" : "問題回報"
+  "breadcrumb|welcome" : "從這開始"
   "User|Login": "帳號名稱"
   "User|Email": "電子郵件"
   "User|Realname": "真實姓名"
@@ -470,7 +472,7 @@ zh_TW:
   "People": "人才"
   "Community": "社群"
   "Law & Licensing": "法律源地"
-  "Workshop": "工作坊"
+  "Activities": "活動"
   "Resource Catalog": "資源表列"
   "About": "關於"
   "template_footer_content": "自由軟體鑄造場 製作 最佳瀏覽狀態：IE7或Firefox2.0以上 (建議使用Firefox) ‧ 解析度1024*768<br><strong>E-Mail</strong>：<a href=\"mailto:contact@openfoundry.org\">contact@openfoundry.org</a> <strong>Address</strong>：台北市南港區研究院路2段128號 中央研究院資訊科學研究所<a href=\"http://www.openfoundry.org/privacy-policy\">隱私權條款</a>. <a href=\"http://www.openfoundry.org/terms-of-use\">使用條款</a><span style=\"position: relative; top: 8px; margin-top: -8px;\"><a href=\"http://www.openfoundry.org/about/8101\"><img src=\"http://www.openfoundry.org/images/M_images/rss-feed-all.png\"></a></span>"
