commit on the openfoundry feature OF-RIT

--- a/branches/of_rit/config/locales/en.yml
+++ b/branches/of_rit/config/locales/en.yml
@@ -785,3 +785,72 @@ en:
           one: "1 error prohibited this %{model} from being saved"
           other: "%{count} errors prohibited this %{model} from being saved"
         body: "There were problems with the following fields:"
+
+  "rit_index_title": "Ruby Issue Tracker"
+  "rit_table_subject": "Subject"
+  "rit_table_recount": "Replies"
+  "rit_table_date": "Request Date"
+  "rit_table_lastchange": "Last Update"
+  "rit_table_assignto": "Assign To"
+  "rit_table_status": "Status"
+  "rit_table_requester": "Requestor"
+  "rit_table_replies": "Replies"
+  "rit_table_replier": "Replier"
+  "rit_table_atta": "Attachment"
+  "rit_table_replietime": "Reply At"
+  "rit_table_comment_at": "At"
+  "rit_table_comment_before": "Before"
+  "rit_table_priority_string": "The ticket priority is"
+  "rit_table_assign_has_asign": "You have been assigned %{tcount} tickets" 
+  "rit_table_change_log": " The Ticket has Changed at %{ttime}(%{tabout} before) by %{twho} "
+ 
+  "rit_form_subject": "Subject"
+  "rit_form_requester": "Requestor"
+  "rit_form_content": "Content"
+  "rit_form_fileattach": "Attachment"
+  "rit_form_assign_to": "Assign To"
+  "rit_form_priority": "Priorty"
+  "rit_form_status": "Status"
+  "rit_form_type": "Type"
+  "rit_form_replier": "Replier"
+  "rit_form_replicontent": "Reply Content"
+  "rit_form_repliestitle": "Reply The Ticket"
+  "rit_form_comment_title": "Comment the Issue"
+  "rit_form_comment_write": "Write your comment"
+  "rit_form_change_issue_stat": "Change the Issue Stat"
+  "rit_form_comment_the_issue": "Comment the Issue"
+  "rit_form_file_send_limitnote": "File size each 2MB maximum"
+  "rit_form_email": "Email"
+ 
+  "rit_link_post_new": "Post new issue"
+  "rit_link_post_view_assigned": "View your assigned list"
+  "rit_link_comment_add": "Add A Comment" 
+  "rit_link_changestat": "Change Stat"
+  "rit_link_view_all": "View All Requests"
+
+  "rit_msg_add_error": "Please full the Subject and Content field and valid email address"  
+  "rit_mag_add_ok": "Your request has open."
+  "rit_msg_reply_ok": "Your reply has added. "
+  "rit_msg_captcha_error": "Please confirm captcha"
+  "rit_mas_reply_error": "Please full the Subject adn Content field"
+  "rit_msg_email_error": "Please input the valid email address"
+  "rit_table_assignings": "etc %{acount} peoples"
+  "rit_keyword_search": "The keyword %{kword} has %{kcount} records. "
+  "rit_form_key_search": "Key Word"
+  "rit_msg_oversize": "The file name [%{ufname}] is over upload limit (%{ufsize})"
+  "rit_link_uploadmore": "Upload more file"
+  "rit_title_uploadmore": "Adding more file from the ticket"
+  "rit_mag_upload_empty_error": "All file field are empty"
+  "rit_msg_upload_ok": "File upload attachment compleet"
+  "rit_title_deleteupload": "Edit attachments"
+  "rit_link_deleteupload": "Edit attachments"
+  "rit_msg_table_deleteattachment": "Please select some attachments to remove."
+  "rit_msg_attach_delete_ok": "File remove compleet"
+  "rit_msg_upload_not_yours": "you can\'t not edit files of this ticket"
+
+  ritstatus:
+    DELETE: "Delete"
+    OPEN: "Open"
+    PROCESS: "Process"
+    SUSPENDED: "Subpened"
+    FINISH: "Finish"
