--- a/branches/of_rit/config/locales/zh_TW.yml
+++ b/branches/of_rit/config/locales/zh_TW.yml
@@ -797,3 +797,71 @@ zh_TW:
           other: "有 %{count} 個錯誤發生使得「%{model}」無法被儲存。"
         body: "以下欄位發生問題："
 
+  "rit_index_title": "問題回報/待辦事項"
+  "rit_table_subject": "主題"
+  "rit_table_recount": "回覆數"
+  "rit_table_date": "發佈時間"
+  "rit_table_lastchange": "最後異動時間"
+  "rit_table_assignto": "承辦人"
+  "rit_table_status": "狀態"
+  "rit_table_requester": "申請人"
+  "rit_table_replies": "回覆內容"
+  "rit_table_replier": "回覆人"
+  "rit_table_atta": "附件"
+  "rit_table_replietime": "回覆時間"
+  "rit_table_comment_at": "於"
+  "rit_table_comment_before": "前"
+  "rit_table_priority_string": "此申請單的重要性為" 
+  "rit_table_assign_has_asign": "您有 %{tcount} 個指派的工作"
+  "rit_table_change_log": "本申請單狀態於 %{ttime} (%{tabout}前) 修改，變更者為 %{twho}"
+ 
+  "rit_form_subject": "主題"
+  "rit_form_requester": "申請人"
+  "rit_form_content": "內容"
+  "rit_form_fileattach": "夾帶檔案"
+  "rit_form_assign_to": "指派給"
+  "rit_form_priority": "重要性"
+  "rit_form_status": "狀態"
+  "rit_form_type": "類型"
+  "rit_form_replier": "回覆人"
+  "rit_form_replicontent": "回覆內容"
+  "rit_form_repliestitle": "回覆申請單"
+  "rit_form_comment_title": "評論發表"
+  "rit_form_comment_write": "發表您的評論"
+  "rit_form_change_issue_stat": "變更申請單狀態"
+  "rit_form_comment_the_issue": "發表評論"
+  "rit_form_file_send_limitnote": "每個檔案最高可上傳2MB"
+  "rit_form_email": "電子郵件"
+  "rit_link_post_new": "新增申請單"
+  "rit_link_post_view_assigned": "檢視您被指派的申請單"
+  "rit_link_comment_add": "發表評論"
+  "rit_link_changestat": "變更狀態"
+  "rit_link_view_all": "檢視所有申請單"
+
+  "rit_msg_add_error": "請填寫所有的欄位"
+  "rit_mag_add_ok": "申請單已完成開啟。"
+  "rit_msg_reply_ok": "已完成回覆。"
+  "rit_mas_reply_error": "請填寫所有的欄位"
+  "rit_msg_captcha_error": "驗證碼錯誤"
+  "rit_msg_changestat": "申請單狀態已變更完成"
+  "rit_table_assignings": "等%{acount}人一同接受指派"
+  "rit_msg_email_error": "請填入有效的電子郵件位址"
+  "rit_keyword_search": "搜尋的字串「%{kword}」有 %{kcount}筆"
+  "rit_form_key_search": "輸入關鍵字"
+  "rit_msg_oversize": "附件檔「%{ufname}」已超過限制容量(%{ufsize})"
+  "rit_link_uploadmore": "上傳附件"
+  "rit_title_uploadmore": "新增附件上傳"
+  "rit_mag_upload_empty_error": "所有上傳欄位全部空白"
+  "rit_msg_upload_ok": "檔案附加完成" 
+  "rit_title_deleteupload": "刪除附件檔案"
+  "rit_link_deleteupload": "刪除附件"
+  "rit_msg_table_deleteattachment": "請勾選欲刪除的附件檔"
+  "rit_msg_attach_delete_ok": "附件已刪除完成"
+  "rit_msg_upload_not_yours": "您的權限不足或是該申請單不屬於您可變動上傳與刪除附件"
+
+  ritstatus:
+    DELETE: "已刪除"
+    OPEN: "開放中"
+    PROCESS: "處理中"
+    SUSPENDED: "駁回"
+    FINISH: "完成"
