--- a/branches/of_rit/config/locales/zh_TW.yml
+++ b/branches/of_rit/config/locales/zh_TW.yml
@@ -805,7 +805,7 @@ zh_TW:
   "rit_index_title": "問題回報/待辦事項"
   "rit_table_subject": "主題"
   "rit_table_recount": "回覆數"
-  "rit_table_date": "發佈時間"
+  "rit_table_date": "發表時間"
   "rit_table_lastchange": "最後異動時間"
   "rit_table_assignto": "承辦人"
   "rit_table_status": "狀態"
@@ -835,7 +835,7 @@ zh_TW:
   "rit_form_comment_write": "發表您的評論"
   "rit_form_change_issue_stat": "變更申請單狀態"
   "rit_form_comment_the_issue": "發表評論"
-  "rit_form_file_send_limitnote": "每個檔案最高可上傳2MB"
+  "rit_form_file_send_limitnote": "每個檔案最高可上傳%{ufmax}"
   "rit_form_email": "電子郵件"
   "rit_link_post_new": "新增申請單"
   "rit_link_post_view_assigned": "檢視您被指派的申請單"
@@ -867,6 +867,11 @@ zh_TW:
   "rit_link_reply_with_quote": "引言回覆"
   "rit_quote_reply_msg": "%{cname}於%{ctime}寫到："
   "rit_msg_uploaded_ok_each_filename" : "上傳的檔案：%{ufname}已上傳完成"
+  "rit_mailer_link_back": "詳細資訊網址"
+  "rit_link_ticket_types": "申請單類型"
+  "rit_link_back_the_ticket": "返回申請單"
+  "rit_log_pick_up": "使用者 %{uname} 已領取此申請單"
+
   ritstatus:
     DELETE: "已刪除"
     OPEN: "開放中"
