--- a/trunk/of/config/locales/wiki_en.yml
+++ b/trunk/of/config/locales/wiki_en.yml
@@ -27,7 +27,7 @@
     #About page list
     "Page Name": "Page Name"
     Summary: "Summary"
-    Author: "Author"
+    "Revised by": "Revised by"
     Revision: "Revision"
     Status: "Status"
     "Modify Time": "Modify Time"
@@ -64,6 +64,8 @@
     message:
       "Are you sure?": "Are you sure?"
       "File exists": "%{files} exists"
+      "Only for image file": "Only for image file"
+      "File size limit": "File size limit is %{file_size}"
       "Total file size limit": "Total file size is %{total}, current is%{current}"
       "No selected items": "No selected items"
       "This page is not exists": "This page is not exists"
