--- a/trunk/of/config/locales/wiki_zh_TW.yml
+++ b/trunk/of/config/locales/wiki_zh_TW.yml
@@ -24,10 +24,10 @@
     PRIVATE: "私有"
     PUBLIC: "公開"
   
-    #About page
+    #About page list
     "Page Name": "頁面名稱"
     Summary: "摘要"
-    Author: "作者"
+    "Revised by": "修訂者"
     Revision: "版號"
     Status: "狀態"
     "Modify Time": "修改時間"
@@ -64,6 +64,8 @@
     message:
       "Are you sure?": "你確定嗎?"
       "File exists": "檔案 %{files} 已存在"
+      "Only for image file": "僅能上傳圖片檔案"
+      "File size limit": "單檔大小限制為%{file_size}"
       "Total file size limit": "總檔案容量限制為%{total}, 目前為%{current}"
       "No selected items": "沒有選擇的項目"
       "This page is not exists": "這個頁面不存在"
