add and change some funs

--- a/branches/of_rit/config/locales/en.yml
+++ b/branches/of_rit/config/locales/en.yml
@@ -860,6 +860,31 @@ en:
   "rit_link_ticket_types": "Ticket Types"
   "rit_link_back_the_ticket": "Back"
   "rit_log_pick_up": "User %{uname} is pick up the request. "
+  "rit_form_tag": "Tag"
+  "rit_form_tag_help": "Input some key words like system or version."
+  "rit_form_cc": "CC"
+  "rit_form_cc_help": "Allow comma for multi CC delivers"
+  "rit_form_bcc": "BCC"
+  "rit_form_bcc_help": "Allow comma for multi BCC deliver"
+  "rit_table_bcc_note": "show only for creater"
+  "rit_link_set_to_watch_list": "Add to watch list"
+  "rit_link_remove_watch_list": "Remove from watch list"
+  "rit_ask_to_set_watch_list": "Sure add to your watch list ?"
+  "rit_ask_remove_watch_list": "Sure remove from your watch list ?"
+  "rit_notice_watch_list_add_ok": "Add to watch list ok"
+  "rit_notice_watch_list_remove_ok": "remove to watch list ok"
+  "rit_link_nobody_pickup": "Pickup the ticket"
+  "rit_notice_pickup_ok": "The ticket is ok assign to you"
+  "rit_notice_pickup_error": "You are not in the project, can't assign to you"
+  "rit_log_assign": "Member %{uname} is assign to woner for the ticket"
+  "rit_log_pickup": "Member %{uname} is pickup this ticket"
+  "rit_log_remove_assign": "Member %{uname} is pickup from this ticket"
+  "rit_log_remove_all_assign": "All owners are removed from this ticket"
+  "rit_log_priority": "Priority has change to %{val}"
+  "rit_log_status": "Status has change to %{val}"
+  "rit_log_type": "Type has change to %{val}"
+  "rit_ask_to_pickup": "Sure to pick up this ticket ?"
+
 
   ritstatus:
     DELETE: "Delete"
