--- a/branches/of_rit/config/locales/zh_TW.yml
+++ b/branches/of_rit/config/locales/zh_TW.yml
@@ -846,7 +846,7 @@ zh_TW:
   "rit_msg_add_error": "請填寫所有的欄位"
   "rit_mag_add_ok": "申請單已完成開啟。"
   "rit_msg_reply_ok": "已完成回覆。"
-  "rit_mas_reply_error": "請填寫所有的欄位"
+  "rit_mas_reply_error": "主題與內容都不可留白"
   "rit_msg_captcha_error": "驗證碼錯誤"
   "rit_msg_changestat": "申請單狀態已變更完成"
   "rit_table_assignings": "等%{acount}人一同接受指派"
@@ -871,6 +871,31 @@ zh_TW:
   "rit_link_ticket_types": "申請單類型"
   "rit_link_back_the_ticket": "返回申請單"
   "rit_log_pick_up": "使用者 %{uname} 已領取此申請單"
+  "rit_form_tag": "標籤"
+  "rit_form_tag_help": "可輸入相關的關鍵字，並用半形逗號分隔，例:Linux,version,其它需特別標明的事項"
+  "rit_form_cc": "副本"
+  "rit_form_cc_help": "可以用逗號分隔多副本收件人"
+  "rit_form_bcc": "密件副本"
+  "rit_form_bcc_help": "可以用逗號分隔多密件副本收件人"
+  "rit_table_bcc_note": "此密件副本只有申請者可顯示"
+  "rit_link_set_to_watch_list": "加入觀查名單"
+  "rit_link_remove_watch_list": "移除觀查名單"
+  "rit_ask_to_set_watch_list": "確定要此申請單加入您的觀查名單？"
+  "rit_ask_remove_watch_list": "確定要此申請單移出您的觀查名單？"
+  "rit_notice_watch_list_add_ok": "已完成加入觀查名單"
+  "rit_notice_watch_list_remove_ok": "已完成移出觀查名單"
+  "rit_link_nobody_pickup": "我要承辦"
+  "rit_notice_pickup_ok": "已完成申請單指派"
+  "rit_notice_pickup_error": "您不是這專案的成員，無法指派"
+  "rit_log_assign": "成員 %{uname} 已被指派為承辦人"
+  "rit_log_pickup": "成員 %{uname} 自願承辦這張申請單"
+  "rit_log_remove_assign": "成員 %{uname} 已移除承辦此申請單"
+  "rit_log_remove_all_assign": "所有承辦員都自此申請單移除了"
+  "rit_log_priority": "此申請單重要性變更為 %{val}"
+  "rit_log_status": "此申請單的狀態變更為 %{val}"
+  "rit_log_type": "此申請單的類型變更為 %{val}"
+  "rit_ask_to_pickup": "確定要承辦此申請單嗎"
+
 
   ritstatus:
     DELETE: "已刪除"
