--- a/branches/of_rit/config/locales/en.yml
+++ b/branches/of_rit/config/locales/en.yml
@@ -902,7 +902,7 @@ en:
   "rit_link_type_all": "All"
   rittickettype:
     BUG: "Bug"
-    Patch: "Path"
+    Patch: "Patch"
     Task: "Task"
     Feature: "Feature"
-    Enhancement: "Enhancement"
+    Enhancement: "Wishlist"
