--- a/trunk/of/config/locales/wiki_en.yml
+++ b/trunk/of/config/locales/wiki_en.yml
@@ -77,3 +77,4 @@
       "Page name already exist": "Page name already exist"
       "Please confirm captcha": "Please confirm captcha"
       "HomePage can't be private": "HomePage can't be private"
+      "Page name can not has '/'": "Page name can not has '/'"
